# mc_puppet

./: CMakeLists.txt  README.md
src/: config.h.in  simple_human.cpp  simple_human.h
